from typing import List

import pytest

from imagewriter.color import Color
from imagewriter.encoding import (
    BACKSPACE,
    Bytes,
    CANCEL_CURRENT_LINE,
    CLEAR_ALL_TABS,
    Command,
    CR,
    Ctrl,
    DESELECT,
    DISABLE_MODE,
    ENABLE_MOUSE_TEXT_MAPPING_MODE,
    EnableCustomCharacterMode,
    Esc,
    FF,
    InsertSpaces,
    LF,
    LINE_FEED_FORWARD,
    LINE_FEED_REVERSE,
    LineFeed,
    Print,
    PRINT_SLASHED_ZERO,
    PRINT_UNSLASHED_ZERO,
    REQUEST_SELF_IDENTIFY,
    RESET,
    SELECT,
    set_language,
    SET_TOP_OF_FORM,
    SetAutoLFAfterCR,
    SetColor,
    SetCRInsertion,
    SetDistanceBetweenLines,
    SetLFWhenLineFull,
    SetLinesPerInch,
    SetMaxCustomCharacterWidth,
    SetPaperOutSensor,
    SetPerforationSkip,
    SetPitch,
    SetPrintCommands,
    SetQuality,
    SetSoftwareSelectResponse,
    SetSpacing,
    SetUnidirectionalPrinting,
    Space,
    START_BOLDFACE,
    START_DOUBLE_WIDTH,
    START_HALF_HEIGHT,
    START_SUBSCRIPT,
    START_SUPERSCRIPT,
    START_UNDERLINE,
    STOP_BOLDFACE,
    STOP_DOUBLE_WIDTH,
    STOP_HALF_HEIGHT,
    STOP_SUBSCRIPT,
    STOP_SUPERSCRIPT,
    STOP_UNDERLINE,
    TAB,
)
from imagewriter.language import Language
from imagewriter.pitch import Pitch
from imagewriter.print import PrintCommands
from imagewriter.quality import Quality

COMMANDS: List[Command] = [
    BACKSPACE,
    Bytes(b"hello"),
    CANCEL_CURRENT_LINE,
    CLEAR_ALL_TABS,
    # ClearManyTabs,
    # CloseLanguageSwitches,
    # CloseSoftwareSwitches,
    CR,
    Ctrl("Q"),
    DESELECT,
    DISABLE_MODE,
    ENABLE_MOUSE_TEXT_MAPPING_MODE,
    EnableCustomCharacterMode(True),
    EnableCustomCharacterMode(False),
    Esc("x"),
    FF,
    # TODO: Should this throw on non-proportional fonts?
    InsertSpaces(Pitch.ELITE_PROPORTIONAL, 2),
    LF,
    LINE_FEED_FORWARD,
    LINE_FEED_REVERSE,
    LineFeed(2),
    # LoadCustomCharacters,
    # OpenLanguageSwitches,
    # OpenSoftwareSwitches,
    Print(b"hello"),
    PRINT_SLASHED_ZERO,
    PRINT_UNSLASHED_ZERO,
    # PrintGraphicsData,
    REQUEST_SELF_IDENTIFY,
    RESET,
    SELECT,
    SET_TOP_OF_FORM,
    SetAutoLFAfterCR(True),
    SetAutoLFAfterCR(False),
    SetColor(Color.BLACK),
    SetCRInsertion(True),
    SetCRInsertion(False),
    SetDistanceBetweenLines(6),
    # SetLeftMargin,
    *set_language(Language.BRITISH),
    SetLFWhenLineFull(True),
    SetLFWhenLineFull(False),
    SetLinesPerInch(6),
    SetLinesPerInch(8),
    # SetManyTabs,
    SetMaxCustomCharacterWidth(8),
    SetMaxCustomCharacterWidth(16),
    # SetOneTab,
    # SetPageLength,
    SetPaperOutSensor(True),
    SetPaperOutSensor(False),
    SetPerforationSkip(True),
    SetPerforationSkip(False),
    SetPitch(Pitch.ELITE),
    SetPrintCommands(PrintCommands.CR_LF_AND_FF),
    SetPrintCommands(PrintCommands.CR_ONLY),
    SetQuality(Quality.NEAR_LETTER_QUALITY),
    SetSoftwareSelectResponse(True),
    SetSoftwareSelectResponse(False),
    # SetSoftwareSwitches,
    # TODO: Should this throw on non-proportional fonts?
    SetSpacing(Pitch.ELITE_PROPORTIONAL, 2),
    SetUnidirectionalPrinting(True),
    SetUnidirectionalPrinting(False),
    Space(),
    START_BOLDFACE,
    START_DOUBLE_WIDTH,
    START_HALF_HEIGHT,
    START_SUBSCRIPT,
    START_SUPERSCRIPT,
    START_UNDERLINE,
    STOP_BOLDFACE,
    STOP_DOUBLE_WIDTH,
    STOP_HALF_HEIGHT,
    STOP_SUBSCRIPT,
    STOP_SUPERSCRIPT,
    STOP_UNDERLINE,
    TAB,
]


@pytest.mark.parametrize("command", COMMANDS)
def test_bytes_command(command, snapshot) -> None:
    assert bytes(command) == snapshot


@pytest.mark.parametrize("command", COMMANDS)
def test_repr_command(command, snapshot) -> None:
    assert repr(command) == snapshot
