# serializer version: 1
# name: test_bytes_command[command0]
  b'\x08'
# ---
# name: test_bytes_command[command10]
  b'\x1b&'
# ---
# name: test_bytes_command[command11]
  b'\x1b*'
# ---
# name: test_bytes_command[command12]
  b"\x1b'"
# ---
# name: test_bytes_command[command13]
  b'\x1bx'
# ---
# name: test_bytes_command[command14]
  b'\x0c'
# ---
# name: test_bytes_command[command15]
  b'\x1b2'
# ---
# name: test_bytes_command[command16]
  b'\n'
# ---
# name: test_bytes_command[command17]
  b'\x1bf'
# ---
# name: test_bytes_command[command18]
  b'\x1br'
# ---
# name: test_bytes_command[command19]
  b'\x1f2'
# ---
# name: test_bytes_command[command1]
  b'hello'
# ---
# name: test_bytes_command[command20]
  b'\x1bI\xe1D1234\x04'
# ---
# name: test_bytes_command[command21]
  b'\x1bZ\xc0\x00'
# ---
# name: test_bytes_command[command22]
  b'hello'
# ---
# name: test_bytes_command[command23]
  b'\x1bD\x00\x80'
# ---
# name: test_bytes_command[command24]
  b'\x1bZ\x00\x80'
# ---
# name: test_bytes_command[command25]
  b'\x1bG00041234'
# ---
# name: test_bytes_command[command26]
  b'\x1b?'
# ---
# name: test_bytes_command[command27]
  b'\x1bc'
# ---
# name: test_bytes_command[command28]
  b'\x11'
# ---
# name: test_bytes_command[command29]
  b'\x1bv'
# ---
# name: test_bytes_command[command2]
  b'\x18'
# ---
# name: test_bytes_command[command30]
  b'\x1bD\x01\x00'
# ---
# name: test_bytes_command[command31]
  b'\x1bZ\x01\x00'
# ---
# name: test_bytes_command[command32]
  b'\x1bK0'
# ---
# name: test_bytes_command[command33]
  b'\x1bl1'
# ---
# name: test_bytes_command[command34]
  b'\x1bl0'
# ---
# name: test_bytes_command[command35]
  b'\x1bT06'
# ---
# name: test_bytes_command[command36]
  b'\x1bL012'
# ---
# name: test_bytes_command[command37]
  b'\x1bL012'
# ---
# name: test_bytes_command[command38]
  b'\x1bZ \x00'
# ---
# name: test_bytes_command[command39]
  b'\x1bD\xc0\x00'
# ---
# name: test_bytes_command[command3]
  b'\x1b0'
# ---
# name: test_bytes_command[command40]
  b'\x1bD\x04\x00'
# ---
# name: test_bytes_command[command41]
  b'\x1bZ\x04\x00'
# ---
# name: test_bytes_command[command42]
  b'\x1bA'
# ---
# name: test_bytes_command[command43]
  b'\x1bB'
# ---
# name: test_bytes_command[command44]
  b"\x1b(b'004',b'008',b'012'."
# ---
# name: test_bytes_command[command45]
  b'\x1b-'
# ---
# name: test_bytes_command[command46]
  b'\x1b+'
# ---
# name: test_bytes_command[command47]
  b'\x1bU016'
# ---
# name: test_bytes_command[command48]
  b'\x1bH0012'
# ---
# name: test_bytes_command[command49]
  b'\x1bH1584'
# ---
# name: test_bytes_command[command4]
  b"\x1b)b'004',b'008',b'012'."
# ---
# name: test_bytes_command[command50]
  b'\x1bO'
# ---
# name: test_bytes_command[command51]
  b'\x1bo'
# ---
# name: test_bytes_command[command52]
  b'\x1bZ\x00 '
# ---
# name: test_bytes_command[command53]
  b'\x1bD\x00 '
# ---
# name: test_bytes_command[command54]
  b'\x1bE'
# ---
# name: test_bytes_command[command55]
  b'\x1bD\x02\x00'
# ---
# name: test_bytes_command[command56]
  b'\x1bZ\x02\x00'
# ---
# name: test_bytes_command[command57]
  b'\x1ba2'
# ---
# name: test_bytes_command[command58]
  b'\x1bZ\x08\x00'
# ---
# name: test_bytes_command[command59]
  b'\x1bD\x08\x00'
# ---
# name: test_bytes_command[command5]
  b'\x1bD\xc0\x00'
# ---
# name: test_bytes_command[command60]
  b'\x1bD\xc0\x00'
# ---
# name: test_bytes_command[command61]
  b'\x1bZ\xc0\x00'
# ---
# name: test_bytes_command[command62]
  b'\x1bm2'
# ---
# name: test_bytes_command[command63]
  b'\x1b>'
# ---
# name: test_bytes_command[command64]
  b'\x1b<'
# ---
# name: test_bytes_command[command65]
  b' '
# ---
# name: test_bytes_command[command66]
  b'\x1b!'
# ---
# name: test_bytes_command[command67]
  b'\x0e'
# ---
# name: test_bytes_command[command68]
  b'\x1bw'
# ---
# name: test_bytes_command[command69]
  b'\x1by'
# ---
# name: test_bytes_command[command6]
  b'\r'
# ---
# name: test_bytes_command[command70]
  b'\x1bx'
# ---
# name: test_bytes_command[command71]
  b'\x1bX'
# ---
# name: test_bytes_command[command72]
  b'\x1b"'
# ---
# name: test_bytes_command[command73]
  b'\x0f'
# ---
# name: test_bytes_command[command74]
  b'\x1bW'
# ---
# name: test_bytes_command[command75]
  b'\x1bz'
# ---
# name: test_bytes_command[command76]
  b'\x1bz'
# ---
# name: test_bytes_command[command77]
  b'\x1bY'
# ---
# name: test_bytes_command[command78]
  b'\t'
# ---
# name: test_bytes_command[command7]
  b'\x11'
# ---
# name: test_bytes_command[command8]
  b'\x13'
# ---
# name: test_bytes_command[command9]
  b'\x1b$'
# ---
# name: test_repr_command[command0]
  'Backspace()'
# ---
# name: test_repr_command[command10]
  'EnableMouseTextMappingMode()'
# ---
# name: test_repr_command[command11]
  'EnableCustomCharacterMode(map=True)'
# ---
# name: test_repr_command[command12]
  'EnableCustomCharacterMode(map=False)'
# ---
# name: test_repr_command[command13]
  'Esc(x)'
# ---
# name: test_repr_command[command14]
  'FormFeed()'
# ---
# name: test_repr_command[command15]
  'Esc(2)'
# ---
# name: test_repr_command[command16]
  '<LF>'
# ---
# name: test_repr_command[command17]
  'LineFeedForward()'
# ---
# name: test_repr_command[command18]
  'LineFeedReverse()'
# ---
# name: test_repr_command[command19]
  'LineFeed(2)'
# ---
# name: test_repr_command[command1]
  "Bytes(b'hello')"
# ---
# name: test_repr_command[command20]
  "LoadCustomCharacters([CustomCharacterData(character=CustomCharacter(225), data=b'1234', top_wires=True)])"
# ---
# name: test_repr_command[command21]
  'OpenSoftwareSwitches([0b11000000, 0b00000000])'
# ---
# name: test_repr_command[command22]
  "b'hello'"
# ---
# name: test_repr_command[command23]
  'PrintSlashedZero(CLOSE, [0b00000000, 0b10000000])'
# ---
# name: test_repr_command[command24]
  'PrintUnslashedZero(OPEN, [0b00000000, 0b10000000])'
# ---
# name: test_repr_command[command25]
  'PrintGraphicsData(0b110001 0b110010 0b110011 0b110100)'
# ---
# name: test_repr_command[command26]
  'RequestSelfIdentify()'
# ---
# name: test_repr_command[command27]
  'Reset()'
# ---
# name: test_repr_command[command28]
  'Select()'
# ---
# name: test_repr_command[command29]
  'SetTopOfForm()'
# ---
# name: test_repr_command[command2]
  'CancelCurrentLine()'
# ---
# name: test_repr_command[command30]
  'SetAutoLFAfterCR(True, CLOSE, [0b00000001, 0b00000000])'
# ---
# name: test_repr_command[command31]
  'SetAutoLFAfterCR(False, OPEN, [0b00000001, 0b00000000])'
# ---
# name: test_repr_command[command32]
  'SetColor(Color.BLACK)'
# ---
# name: test_repr_command[command33]
  'SetCRInsertion(True)'
# ---
# name: test_repr_command[command34]
  'SetCRInsertion(False)'
# ---
# name: test_repr_command[command35]
  'SetDistanceBetweenLines(6)'
# ---
# name: test_repr_command[command36]
  'SetLeftMargin(12)'
# ---
# name: test_repr_command[command37]
  'SetLeftMargin(12)'
# ---
# name: test_repr_command[command38]
  'OpenLanguageSwitches(Language.BRITISH, OPEN, [0b00100000, 0b00000000])'
# ---
# name: test_repr_command[command39]
  'CloseLanguageSwitches(Language.BRITISH, CLOSE, [0b11000000, 0b00000000])'
# ---
# name: test_repr_command[command3]
  'ClearAllTabs()'
# ---
# name: test_repr_command[command40]
  'SetLFWhenLineFull(True, CLOSE, [0b00000100, 0b00000000])'
# ---
# name: test_repr_command[command41]
  'SetLFWhenLineFull(False, OPEN, [0b00000100, 0b00000000])'
# ---
# name: test_repr_command[command42]
  'SetLinesPerInch(6)'
# ---
# name: test_repr_command[command43]
  'SetLinesPerInch(8)'
# ---
# name: test_repr_command[command44]
  'SetManyTabs([4, 8, 12])'
# ---
# name: test_repr_command[command45]
  'SetMaxCustomCharacterWidth(8)'
# ---
# name: test_repr_command[command46]
  'SetMaxCustomCharacterWidth(16)'
# ---
# name: test_repr_command[command47]
  'SetOneTab(16)'
# ---
# name: test_repr_command[command48]
  'SetPageLength(12)'
# ---
# name: test_repr_command[command49]
  'SetPageLength(1584)'
# ---
# name: test_repr_command[command4]
  'ClearManyTabs([4, 8, 12])'
# ---
# name: test_repr_command[command50]
  'SetPaperOutSensor(True)'
# ---
# name: test_repr_command[command51]
  'SetPaperOutSensor(False)'
# ---
# name: test_repr_command[command52]
  'SetPerforationSkip(True, OPEN, [0b00000000, 0b00100000])'
# ---
# name: test_repr_command[command53]
  'SetPerforationSkip(False, CLOSE, [0b00000000, 0b00100000])'
# ---
# name: test_repr_command[command54]
  'SetPitch(Pitch.ELITE)'
# ---
# name: test_repr_command[command55]
  'SetPrintCommands(PrintCommands.CR_LF_AND_FF, CLOSE, [0b00000010, 0b00000000])'
# ---
# name: test_repr_command[command56]
  'SetPrintCommands(PrintCommands.CR_ONLY, OPEN, [0b00000010, 0b00000000])'
# ---
# name: test_repr_command[command57]
  'SetQuality(Quality.NEAR_LETTER_QUALITY, scribe_mode=False)'
# ---
# name: test_repr_command[command58]
  'SetSoftwareSelectResponse(True, OPEN, [0b00001000, 0b00000000])'
# ---
# name: test_repr_command[command59]
  'SetSoftwareSelectResponse(False, CLOSE, [0b00001000, 0b00000000])'
# ---
# name: test_repr_command[command5]
  'CloseSoftwareSwitches([0b11000000, 0b00000000])'
# ---
# name: test_repr_command[command60]
  'SetSoftwareSwitches(True, [0b11000000, 0b00000000])'
# ---
# name: test_repr_command[command61]
  'SetSoftwareSwitches(False, [0b11000000, 0b00000000])'
# ---
# name: test_repr_command[command62]
  'SetSpacing(Pitch.ELITE_PROPORTIONAL, 2)'
# ---
# name: test_repr_command[command63]
  'SetUnidirectionalPrinting(is_unidirectional=True)'
# ---
# name: test_repr_command[command64]
  'SetUnidirectionalPrinting(is_unidirectional=False)'
# ---
# name: test_repr_command[command65]
  "b' '"
# ---
# name: test_repr_command[command66]
  'StartBoldface()'
# ---
# name: test_repr_command[command67]
  'StartDoubleWidth()'
# ---
# name: test_repr_command[command68]
  'StartHalfHeight()'
# ---
# name: test_repr_command[command69]
  'StartSubscript()'
# ---
# name: test_repr_command[command6]
  '<CR>'
# ---
# name: test_repr_command[command70]
  'StartSuperscript()'
# ---
# name: test_repr_command[command71]
  'StartUnderline()'
# ---
# name: test_repr_command[command72]
  'StopBoldface()'
# ---
# name: test_repr_command[command73]
  'StopDoubleWidth()'
# ---
# name: test_repr_command[command74]
  'StopHalfHeight()'
# ---
# name: test_repr_command[command75]
  'StopSuperscriptOrSubscript()'
# ---
# name: test_repr_command[command76]
  'StopSuperscriptOrSubscript()'
# ---
# name: test_repr_command[command77]
  'StopUnderline()'
# ---
# name: test_repr_command[command78]
  '<TAB>'
# ---
# name: test_repr_command[command7]
  "Ctrl(b'\\x11')"
# ---
# name: test_repr_command[command8]
  'Deselect()'
# ---
# name: test_repr_command[command9]
  'DisableMode()'
# ---
